--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:11.0.1'
     compile 'com.google.firebase:firebase-storage:11.0.1'
     compile 'com.google.firebase:firebase-database:11.0.1'
+    compile 'com.google.firebase:firebase-crash:11.0.1'
+    compile 'com.google.firebase:firebase-config:11.0.1'
     compile 'com.android.support:design:26.0.0-alpha1'
     testCompile 'junit:junit:4.12'
     compile 'com.github.bumptech.glide:glide:4.0.0'
