--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-auth:11.0.1'
@@ -33,12 +35,11 @@ dependencies {
     compile 'com.google.firebase:firebase-crash:11.0.1'
     compile 'com.google.firebase:firebase-config:11.0.1'
     compile 'com.google.firebase:firebase-messaging:11.0.1'
-
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
-
     compile 'com.android.support:design:26.0.0-alpha1'
-    testCompile 'junit:junit:4.12'
     compile 'com.github.bumptech.glide:glide:4.0.0'
+    compile 'com.android.support:support-v4:26.+'
+    testCompile 'junit:junit:4.12'
 }
 
 apply plugin: 'com.google.gms.google-services'
