--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
     <application
         android:allowBackup="true"
@@ -48,7 +50,9 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".Activity.MemberActivity"></activity>
+        <activity android:name=".Activity.MemberActivity" />
+        <activity android:name=".Activity.CheckActivity" />
+        <activity android:name=".Activity.TableActivity" />
     </application>
 
 </manifest>
